--- a/css/styles.css
+++ b/css/styles.css
@@ -212,8 +212,13 @@ a {
 /* Hero Section */
 .hero {
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/api/placeholder/1920/1080") no-repeat center center/cover;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("../img/Madero.png");
+  background-size: cover;
   color: var(--light-text);
   display: flex;
   align-items: center;
@@ -231,18 +236,21 @@ a {
   font-size: 3.5rem;
   margin-bottom: 20px;
   animation: fadeIn 1s ease;
+  text-shadow: 4px 4px 8px rgba(0, 0, 0, 1);
 }
 
 .hero p {
-  font-size: 1.3rem;
+  font-size: 1.7rem;
   margin-bottom: 30px;
   animation: fadeIn 1s ease 0.3s forwards;
   opacity: 0;
+  text-shadow: 4px 4px 8px rgba(0, 0, 0, 1);
 }
 
 .hero .btn {
   animation: fadeIn 1s ease 0.6s forwards;
   opacity: 0;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 }
 
 @keyframes fadeIn {
