--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ a {
 /* Botones */
 .btn {
   display: inline-block;
-  padding: 12px 30px;
+  padding: 12px;
   border-radius: 30px;
   font-weight: 600;
   text-align: center;
@@ -278,6 +278,9 @@ a {
 }
 
 .package-card {
+  display: flex;
+  flex-direction: column;
+  min-height: 500px;
   background-color: #fff;
   border-radius: 10px;
   overflow: hidden;
@@ -292,6 +295,7 @@ a {
 .package-image {
   height: 200px;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .package-image img {
@@ -306,6 +310,9 @@ a {
 }
 
 .package-details {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   padding: 20px;
 }
 
@@ -327,6 +334,8 @@ a {
 .description {
   margin-bottom: 20px;
   color: #666;
+  height: auto;
+  flex-grow: 1;
 }
 
 .package-footer {
@@ -335,6 +344,7 @@ a {
   align-items: center;
   border-top: 1px solid var(--border-color);
   padding-top: 15px;
+  margin-top: auto;
 }
 
 .price {
@@ -1547,6 +1557,17 @@ a {
 
   .package-container {
     grid-template-columns: 1fr;
+    gap: 20px;
+  }
+
+  .package-card {
+    min-height: auto;
+  }
+
+  .package-footer {
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
   }
 
   .section-title {
