--- a/css/armar_paquetes.css
+++ b/css/armar_paquetes.css
@@ -239,13 +239,14 @@
 /* Descripción */
 .text-description {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  margin-bottom: 1rem;
 }
 .item-description {
   color: #5a6c7d;
   line-height: 1.6;
   flex: 1;
-  margin: -1rem;
+  margin: 0 0.5rem;
 }
 
 /* Sección de precio - fila inferior */
